Bug 438308 - Subpar UX when opening the terminal panel but Konsole is not installed
Summary: Subpar UX when opening the terminal panel but Konsole is not installed
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2021-06-09 08:06 UTC by JokerGermany
Modified: 2023-04-05 21:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description JokerGermany 2021-06-09 08:06:50 UTC
STEPS TO REPRODUCE
1. uninstall konsole
2. reboot
3. open kate and try to open the terminal

OBSERVED RESULT
nothing, not even an error message dialog

EXPECTED RESULT
Best Case:
Kate should use the default x-terminal-emulator

At Least:
Kate should throw an error message dialog

SOFTWARE/OS VERSIONS
Ubuntu Mate 20.04
Comment 1 JokerGermany 2021-06-09 08:11:26 UTC
I have to correct me, you can't reproduce the error by uninstalling konsole.
You have to take a distribution without konsole.

After konsole was installed once, kate is working even and using konsole even when it is uninstalled oO
Comment 2 Waqar Ahmed 2021-06-09 08:39:38 UTC
We can't use just any terminal emulator. That is just not possible, and will never happen.
Comment 3 JokerGermany 2021-06-09 08:49:37 UTC
(In reply to Waqar Ahmed from comment #2)
> We can't use just any terminal emulator. That is just not possible, and will
> never happen.

then show a error message, when konsole isn't found.
Comment 4 Christoph Cullmann 2021-06-12 18:30:50 UTC
But to understand this right: we are talking about the terminal window that is "integrated" inside Kate?

And that it stays "empty" if there is no Konsole installed?
If that is the case, we could show there some place holder that at least tells that Konsole is missing. That should be no issue to implement.

But perhaps I misunderstand the issue at hand.
Comment 5 Nate Graham 2021-06-15 23:19:28 UTC
Yeah, using random arbitrary terminal apps there is not technically possible, but we can and should display an error message when Konsole is not installed. Or not even show the option. Or, do as Dolphin does, and show a button to install Konsole! This is really cool.
Comment 6 JokerGermany 2021-06-17 07:24:12 UTC
@Christoph:
Yes the button just do nothing, when konsole isn't installed.

@Nate:
Pls don't hide the option, because then there is the risk that the user didn't get to know about the feature.
A error Message or even a button to install konsole would be great.
Comment 7 Bug Janitor Service 2023-04-03 18:21:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1181
Comment 8 Waqar Ahmed 2023-04-03 19:24:04 UTC
Git commit 5af08dcce62d91132f3060e22ee98609dc6659a5 by Waqar Ahmed.
Committed on 03/04/2023 at 19:00.
Pushed by cullmann into branch 'master'.

Konsole: Show error when konsole not found

Show error in place of the terminal if konsole is not installed

M  +19   -0    addons/konsole/kateconsole.cpp
M  +2    -0    addons/konsole/kateconsole.h

https://invent.kde.org/utilities/kate/commit/5af08dcce62d91132f3060e22ee98609dc6659a5