Konsole: Show error when konsole not found

Show error in place of the terminal if konsole is not installed

BUG: 438308